# observatory

./: .env.template  .gitignore  .pre-commit-config.yaml  .root  LICENSE  README.md  pyproject.toml
lib/activations/: pyproject.toml
lib/activations/activations/: activations.py  activations_computation.py  dataset.py  exemplars.py  exemplars_computation.py  exemplars_wrapper.py  test_exemplars_computation.py
lib/explanations/: pyproject.toml
lib/explanations/explanations/: explainer.py  explainer_prompts.py  explanation_utils.py  explanations.py  explanations_wrapper.py  few_shot_examples.py  llama_model.py  puzzles.json  scoring_utils.py  simulation_utils.py
lib/investigator/: README.md  pyproject.toml
lib/investigator/investigator/: clustering.py  summarization.py
lib/lucepkg/scripts/: nb_kernel.sh  shellenv.sh
lib/neurondb/: Fresh.Dockerfile  FromBackup.Dockerfile  README.md  pyproject.toml
lib/neurondb/neurondb/: __init__.py  filters.py  postgres.py  view.py
lib/neurondb/neurondb/schemas/: __init__.py  base.py  indices.py  tables.py
lib/util/: pyproject.toml
lib/util/util/: activations.py  anthropic.py  chat_input.py  data.py  dataset.py  env.py  errors.py  gpu.py  huggingface.py  malloc.py  neurons_split.py  openai.py  print_loud.py  prod_llms.py  subject.py  types.py
project/expgen/: README.md  pyproject.toml
project/expgen/configs/: distilled_llama.yaml
project/expgen/notebooks/: demo.ipynb
project/expgen/scripts/: compute_exemplars.py  generate_and_score_explanation.py
project/monitor/: README.md  pyproject.toml
project/monitor/monitor/: modal_test.py  server.py  server_modal.py
project/monitor/scripts/: api.sh  download_llm.py  neurondb.sh  web.sh
project/monitor/web/: package-lock.json  package.json  tailwind.config.ts
project/monitor/web/app/: constants.ts  globals.css  layout.tsx  providers.tsx
project/monitor/web/app/dashboard/: layout.tsx  page.tsx
project/monitor/web/app/dashboard/chat/: page.tsx
project/monitor/web/app/dashboard/chat/components/: ChatArea.tsx  LinterPanel.tsx  NeuronDisplay.tsx  SteeringDialog.tsx  SteeringPanel.tsx  columns.tsx  datatable.tsx  tokenselector.tsx
project/monitor/web/app/dashboard/status/: page.tsx
project/monitor/web/app/store/: store.ts
project/monitor/web/app/store/api/: chatApi.ts  neuronsApi.ts  sessionApi.ts
project/monitor/web/app/store/slices/: aiLinterSlice.ts  chatSlice.ts  neuronsSlice.ts  steeringSlice.ts  uiStateSlice.ts
project/monitor/web/app/types/: neuronData.ts  neuronFilters.ts  presetFlow.tsx  tokens.ts
project/monitor/web/components/ui/: card.tsx  toast.tsx  tooltip.tsx
