[project]
name = "luce"
version = "0.0.1"
description = "The base environment for the Transluce Observability repository."

requires-python = ">=3.9,<=3.12"
dependencies = [
    "pre-commit>=3.8.0",
    "jupyter>=1.1.1",
    "jupyter-collaboration>=1.2.0",
    "autoflake==2.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.uv]
package = false
