[project]
name = "activations"
version = "0.0.1"
description = "Neuron activations"

requires-python = "==3.12.*"
dependencies = [
    "util",
    "baukit @ git+https://github.com/choidami/baukit.git",
]

[tool.uv.sources]
util = {path = "../util", editable = true}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["activations"]

[tool.pyright]
strict = ["activations"]
reportMissingTypeStubs = false

[tool.hatch.metadata]
allow-direct-references = true
