[project]
name = "explanations"
version = "0.0.1"
description = "Neuron explanations and scores"

requires-python = "==3.12.*"
dependencies = [
    "util",
    "activations",
    "llama-models @ git+https://github.com/meta-llama/llama-models.git@main",
    "fairscale==0.4.13",
    "termcolor==2.4.0",
    "blobfile==3.0.0",
    "vllm==0.6.2",
]

[tool.uv.sources]
util = {path = "../util", editable = true}
activations = {path = "../activations", editable = true}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["explanations"]

[tool.pyright]
strict = ["explanations"]
reportMissingTypeStubs = false

[tool.hatch.metadata]
allow-direct-references = true
