[project]
name = "investigator"
version = "0.0.1"
description = "Tools comprising the Investigator which helps process large amounts of data"

requires-python = "==3.12.*"
dependencies = [
    "util",
    "neurondb",
]

[tool.uv.sources]
util = {path = "../util", editable = true}
neurondb = {path = "../neurondb", editable = true}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["investigator"]

[tool.pyright]
strict = ["investigator"]
reportMissingTypeStubs = false

[tool.hatch.metadata]
allow-direct-references = true
