[project]
name = "monitor"
version = "0.0.1"
description = "Monitor interface"

requires-python = "==3.12.*"
dependencies = [
  "util",
  "neurondb",
  "explanations",
  "investigator",
  "jupyter>=1.1.1",
  "jupyter-collaboration>=1.2.0",
  "fastapi>=0.114.1",
  "uvicorn>=0.23.1",
  "modal>=0.64.213",
]

[tool.uv.sources]
util = {path = "../../lib/util", editable = true}
neurondb = {path = "../../lib/neurondb", editable = true}
explanations = {path = "../../lib/explanations", editable = true}
investigator = {path = "../../lib/investigator", editable = true}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["monitor"]

[tool.pyright]
strict = ["monitor"]
reportMissingTypeStubs = false

[tool.hatch.metadata]
allow-direct-references = true
